--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
 
     server {
         listen 80;
-        server_name  *.kimcuongxanh.com;
+        server_name  *.kimcuongxanh.local;
 
         location / {
             proxy_set_header Host $host;
